--- a/src/components/Course/Course.scss
+++ b/src/components/Course/Course.scss
@@ -7,17 +7,22 @@
 
   .course {
     &-title {
+      display: flex;
+      flex-direction: column;
       padding: 50px 48px 48px 48px;
       color: $white;
 
       position: relative;
       width: 100%;
       font-weight: 500;
-      display: flex;
       align-items: baseline;
 
       background-image: linear-gradient(to right, rgba(0,0,0, 0.7) 0 100%), url("./../../imgs/brain.jpg");
       background-size: cover;
+
+      &-content {
+        flex: 1;
+      }
 
       &_name {
         margin: 0 0 35px;
