--- a/src/components/CourseCompletion/Module/Module.scss
+++ b/src/components/CourseCompletion/Module/Module.scss
@@ -2,9 +2,10 @@
 
 .module {
   //font-family: 'Comfortaa', cursive;
-  height: -webkit-fill-available;
-  max-width: 900px;
-  margin: 0 auto;
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 
   &-content {
     margin-top: 2em;
