--- a/src/components/TestAnswerEditor/TestAnswerEditor.scss
+++ b/src/components/TestAnswerEditor/TestAnswerEditor.scss
@@ -51,7 +51,11 @@ legend {
   font-size: inherit;
 }
 
-.test-answer {
+.test-question {
+  margin-bottom: 16px;
+}
+
+.test-answer-count {
   .radio-group {
     display: grid;
     grid-template-columns: 1fr 1fr;
