--- a/src/components/CourseProgram/Test/Test.scss
+++ b/src/components/CourseProgram/Test/Test.scss
@@ -27,4 +27,17 @@
     //position: fixed !important;
     margin-top: 100px !important;
   }
+
+  &-new-question {
+    align-items: center;
+    display: flex;
+    height: 500px;
+  }
+
+  &-new-question-btn {
+    height: 100px;
+    position: relative;
+    margin: 0 auto;
+    top: -40px;
+  }
 }
