--- a/src/components/CourseCompletion/CourseCompletion.scss
+++ b/src/components/CourseCompletion/CourseCompletion.scss
@@ -8,6 +8,9 @@
 }
 
 .course-completion {
+  .pro-menu-item.announcements .pro-icon{
+    color: #ff9700;
+  }
   .pro-sub-menu .pro-icon {
     color: $yellow-light-color;
   }
@@ -22,8 +25,6 @@
 .description {
   white-space: break-spaces;
 }
-
-.answer {}
 
 .send-answer-btn {
   margin-top: 1em !important;
